Updated Navbar section

--- a/index.html
+++ b/index.html
@@ -7,43 +7,38 @@
   <title>Emergency Hotline</title>
   <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@500;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
-<body class="bg-white">
+<body class="bg-gray-100">
+<!-- Navbar -->
+<nav class="bg-white shadow px-4 sm:px-6 py-3 flex flex-col sm:flex-row justify-between items-center gap-4 sm:gap-0">
 
-  <!-- Navbar -->
-  <nav class="bg-white shadow px-6 py-3 flex justify-between items-center">
-    <div class="flex items-center gap-3">
-      <img class="w-10 h-10" src="assets/logo.png" alt="Logo">
-      <span class="text-lg font-bold text-[#006747]">
-        Emergency <br /> Service
-      </span>
+  <div class="flex items-center gap-3">
+    <img src="assets/logo.png" alt="Logo" class="w-10 h-10">
+    <span class="text-lg font-bold text-[#006747]">
+      Emergency <br class="sm:hidden"> Service
+    </span>
+  </div>
+
+  <!-- heart, coin, copy section-->
+  <div class="flex items-center gap-4 sm:gap-6">
+    <div class="flex items-center justify-center w-[123px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
+      <span class="font-medium" id="">0</span>
+      <img class="w-6 h-6 cursor-pointer" src="assets/heart.png" alt="" >
     </div>
-    <div class="flex items-center gap-6">
-      <!-- Heart section -->
-      <div
-        class="flex items-center justify-center w-[123px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
-        <span class="font-medium">0</span>
-        <img class="w-6 h-6 cursor-pointer" src="assets/heart.png" alt="Heart">
-      </div>
 
-      <!-- Coin section -->
-      <div
-        class="flex items-center justify-center w-[106px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
-        <span class="font-medium flex items-center justify-center w-[32px] h-[24px]">
-          100
-        </span>
-        <img class="w-[24px] h-[24px]" src="assets/coin.png" alt="Coin">
-      </div>
-
-      <!-- Copy Count section -->
-      <div class="flex items-center justify-center w-[157px] h-[52px] rounded-full bg-[#00A63E] px-4">
-        <span class="font-medium flex items-center justify-center" id="copy-count">
-          0 Copy
-        </span>
-      </div>
+    <div class="flex items-center justify-center w-[106px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
+      <span class="font-medium flex items-center justify-center w-[32px] h-[24px]">100</span>
+      <img class="w-[24px] h-[24px]" src="assets/coin.png" alt="" >
     </div>
-  </nav>
+
+  
+    <div class="flex items-center justify-center w-[157px] h-[52px] rounded-full bg-[#00A63E] px-4 text-white">
+      <span class="font-medium flex items-center justify-center" id="">0 Copy</span>
+    </div>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <section class="w-full h-[239px] flex flex-col items-center justify-between px-6"
@@ -60,4 +55,6 @@
       Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh
     </p>
   </section>
+
+
 </body>
