--- a/index.html
+++ b/index.html
@@ -11,34 +11,36 @@
 </head>
 
 <body class="bg-gray-100">
-<!-- Navbar -->
-<nav class="bg-white shadow px-4 sm:px-6 py-3 flex flex-col sm:flex-row justify-between items-center gap-4 sm:gap-0">
+  <!-- Navbar -->
+  <nav class="bg-white shadow px-4 sm:px-6 py-3 flex flex-col sm:flex-row justify-between items-center gap-4 sm:gap-0">
 
-  <div class="flex items-center gap-3">
-    <img src="assets/logo.png" alt="Logo" class="w-10 h-10">
-    <span class="text-lg font-bold text-[#006747]">
-      Emergency <br class="sm:hidden"> Service
-    </span>
-  </div>
-
-  <!-- heart, coin, copy section-->
-  <div class="flex items-center gap-4 sm:gap-6">
-    <div class="flex items-center justify-center w-[123px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
-      <span class="font-medium" id="">0</span>
-      <img class="w-6 h-6 cursor-pointer" src="assets/heart.png" alt="" >
+    <div class="flex items-center gap-3">
+      <img src="assets/logo.png" alt="Logo" class="w-10 h-10">
+      <span class="text-lg font-bold text-[#006747]">
+        Emergency <br class="sm:hidden"> Service
+      </span>
     </div>
 
-    <div class="flex items-center justify-center w-[106px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
-      <span class="font-medium flex items-center justify-center w-[32px] h-[24px]">100</span>
-      <img class="w-[24px] h-[24px]" src="assets/coin.png" alt="" >
-    </div>
+    <!-- heart, coin, copy section-->
+    <div class="flex items-center gap-4 sm:gap-6">
+      <div
+        class="flex items-center justify-center w-[123px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
+        <span class="font-medium" id="">0</span>
+        <img class="w-6 h-6 cursor-pointer" src="assets/heart.png" alt="">
+      </div>
 
-  
-    <div class="flex items-center justify-center w-[157px] h-[52px] rounded-full bg-[#00A63E] px-4 text-white">
-      <span class="font-medium flex items-center justify-center" id="">0 Copy</span>
+      <div
+        class="flex items-center justify-center w-[106px] h-[52px] rounded-full bg-[rgba(65,255,107,0.1)] px-4 gap-3">
+        <span class="font-medium flex items-center justify-center w-[32px] h-[24px]">100</span>
+        <img class="w-[24px] h-[24px]" src="assets/coin.png" alt="">
+      </div>
+
+
+      <div class="flex items-center justify-center w-[157px] h-[52px] rounded-full bg-[#00A63E] px-4 text-white">
+        <span class="font-medium flex items-center justify-center" id="">0 Copy</span>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Hero Section -->
   <section class="w-full h-[239px] flex flex-col items-center justify-between px-6"
@@ -56,5 +58,64 @@
     </p>
   </section>
 
+  <!-- main section -->
+  <main class="w-full flex flex-col lg:flex-row px-6 py-8">
+
+    <!-- card section -->
+    <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-[30px] flex-1">
+
+      <!-- card_01 -->
+      <div class="bg-white w-[436.67px] h-[360px] p-[32px] rounded-[12px] shadow flex flex-col justify-between">
+     
+        <div class="flex items-start justify-between">
+
+          <div class="flex flex-col items-start">
+            <img class="w-10 h-10 mb-2" src="assets/emergency.png" alt="">
+            <!-- Title_Subtitle -->
+            <h3 class="font-['Hind Madurai'] font-bold text-[24px] text-[rgba(17,17,17,1)]">
+              National Emergency Number
+            </h3>
+            <p class="font-['Roboto'] font-normal text-[18px] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+
+          <img class="w-6 h-6 cursor-pointer card-heart" src="assets/heart.png" alt="">
+        </div>
+
+        <div class="mt-4 font-medium text-[24px] text-[rgba(17,17,17,1)]">
+          999
+        </div>
+
+        <span
+          class="mt-2 flex items-center justify-center font-['Hind Madurai'] font-normal text-[18px] text-[rgba(92,92,92,1)] bg-[rgba(242,242,242,1)] w-[53px] h-[37px] rounded-full">
+          All
+        </span>
+
+
+        <div class="flex gap-3 mt-4">
+          <button
+            class="flex items-center justify-center gap-2 w-[182.33px] h-[40px] text-[rgba(92,92,92,1)] bg-[rgba(255,255,255,1)] rounded-[8px] border copy-btn">
+            <i class="fa-regular fa-copy"></i> Copy
+          </button>
+
+          <button
+            class="flex items-center justify-center gap-2 w-[182.33px] h-[40px] bg-[rgba(0,166,62,1)] text-[rgba(255,255,255,1)] rounded-[8px] call-btn">
+            <i class="fa-solid fa-phone"></i> Call
+          </button>
+        </div>
+      </div>
+
+
+
+    </section>
+  </main>
+
+
+
+
+
 
 </body>
+
+</html>
