--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     let heartCount= 0;
     heartBtn.addEventListener('click', ()=>{
       heartCount++;
-      heartCountEl.textContent === heartCount;
+      heartCountEl.textContent = heartCount;
     }
   );
 
